Upload all program content to new repository

--- a/setting/config.ini
+++ b/setting/config.ini
@@ -1,67 +1,71 @@
 [API]
+first_api_provider = 
 first_api_key = 
 first_modelid = 
-first_api_url = 
+second_api_provider = aliyun
 second_api_key = 
 second_modelid = 
-second_api_url =  
 
 [UI]
-subject = 高中历史
+subject = 高中地理
 
 [Auto]
-cycle_number = 1
-wait_time = 2
+cycle_number = 2
+wait_time = 3
 
 [DualEvaluation]
-enabled = true
-score_diff_threshold = 8
+enabled = False
+score_diff_threshold = 2
 
 [Question1]
-enabled = true
+enabled = True
 standard_answer = 
 min_score = 0
-max_score = 99
-enable_next_button = false
+max_score = 33
+enable_next_button = False
 question_type = Subjective_PointBased_QA
+score_input = 1533,76
+confirm_button = 1192,210
 next_button_pos = 
-score_input = 567,527
-confirm_button = 0,0
-answer_area = 0,0,0,0
-enable_three_step_scoring = false
+answer_area = 937,401,1337,854
+enable_three_step_scoring = False
 score_input_pos_step1 = 
 score_input_pos_step2 = 
 score_input_pos_step3 = 
 
 [Question2]
-enabled = false
+enabled = True
 standard_answer = 
 min_score = 0
 max_score = 100
-enable_next_button = false
+enable_next_button = False
 question_type = Subjective_PointBased_QA
-next_button_pos = 
 score_input = 0,0
 confirm_button = 0,0
-answer_area = 0,0,0,0
+next_button_pos = 
+answer_area = 834,350,1234,650
 
 [Question3]
-enabled = false
+enabled = False
 standard_answer = 
 min_score = 0
 max_score = 100
-enable_next_button = false
+enable_next_button = False
 question_type = Subjective_PointBased_QA
+score_input = 
+confirm_button = 
 next_button_pos = 
 answer_area = 
 
 [Question4]
-enabled = false
+enabled = False
 standard_answer = 
 min_score = 0
 max_score = 100
-enable_next_button = false
+enable_next_button = False
 question_type = Subjective_PointBased_QA
+score_input = 
+confirm_button = 
 next_button_pos = 
 answer_area = 
 
