Update code changes

--- a/setting/config.ini
+++ b/setting/config.ini
@@ -1,17 +1,17 @@
 [API]
-first_api_provider = 
+first_api_provider = volcengine
 first_api_key = 
-first_modelid = 
+first_modelid = ep-20250326030941-xgvbd
 second_api_provider = aliyun
 second_api_key = 
 second_modelid = 
 
 [UI]
-subject = 高中地理
+subject = 
 
 [Auto]
-cycle_number = 2
-wait_time = 3
+cycle_number = 1
+wait_time = 1
 
 [DualEvaluation]
 enabled = False
@@ -19,22 +19,22 @@ score_diff_threshold = 2
 
 [Question1]
 enabled = True
-standard_answer = 
+standard_answer = 答案有“智能阅卷助手”，得33分
 min_score = 0
-max_score = 33
+max_score = 40
 enable_next_button = False
-question_type = Subjective_PointBased_QA
-score_input = 1533,76
-confirm_button = 1192,210
+question_type = Objective_FillInTheBlank
+score_input = 1599,67
+confirm_button = 1670,71
 next_button_pos = 
-answer_area = 937,401,1337,854
+answer_area = 1497,379,1897,679
 enable_three_step_scoring = False
 score_input_pos_step1 = 
 score_input_pos_step2 = 
 score_input_pos_step3 = 
 
 [Question2]
-enabled = True
+enabled = False
 standard_answer = 
 min_score = 0
 max_score = 100
