--- a/setting/config.ini
+++ b/setting/config.ini
@@ -19,7 +19,7 @@ score_diff_threshold = 2
 
 [Question1]
 enabled = True
-standard_answer = 答案有“智能阅卷助手”，得33分
+standard_answer = 
 min_score = 0
 max_score = 40
 enable_next_button = False
