Upload all program content to repository

--- a/setting/config.ini
+++ b/setting/config.ini
@@ -1,7 +1,7 @@
 [API]
 first_api_provider = volcengine
 first_api_key = 
-first_modelid = ep-20250326030941-xgvbd
+first_modelid = 
 second_api_provider = aliyun
 second_api_key = 
 second_modelid = 
@@ -11,7 +11,7 @@ subject =
 
 [Auto]
 cycle_number = 1
-wait_time = 1
+wait_time = 2
 
 [DualEvaluation]
 enabled = False
